--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^14.0.27",
     "parcel-bundler": "^1.12.4",
     "typescript": "^3.9.7"
   },
